; ModuleID = '/home/carl/AnghaBench/linux/sound/isa/sb/extr_sb16_csp.c_set_register.c'
source_filename = "/home/carl/AnghaBench/linux/sound/isa/sb/extr_sb16_csp.c_set_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_sb = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_sb*, i8, i8)* @set_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_register(%struct.snd_sb* %0, i8 zeroext %1, i8 zeroext %2) #0 {
  %4 = alloca %struct.snd_sb*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i8, align 1
  %7 = alloca [3 x i8], align 1
  store %struct.snd_sb* %0, %struct.snd_sb** %4, align 8
  store i8 %1, i8* %5, align 1
  store i8 %2, i8* %6, align 1
  %8 = getelementptr inbounds [3 x i8], [3 x i8]* %7, i64 0, i64 0
  store i8 14, i8* %8, align 1
  %9 = load i8, i8* %5, align 1
  %10 = getelementptr inbounds [3 x i8], [3 x i8]* %7, i64 0, i64 1
  store i8 %9, i8* %10, align 1
  %11 = load i8, i8* %6, align 1
  %12 = getelementptr inbounds [3 x i8], [3 x i8]* %7, i64 0, i64 2
  store i8 %11, i8* %12, align 1
  %13 = load %struct.snd_sb*, %struct.snd_sb** %4, align 8
  %14 = getelementptr inbounds [3 x i8], [3 x i8]* %7, i64 0, i64 0
  %15 = call i32 @command_seq(%struct.snd_sb* %13, i8* %14, i32 3)
  ret i32 %15
}

declare dso_local i32 @command_seq(%struct.snd_sb*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
